--- a/css/components/sections/hero-section/hero-section.scss
+++ b/css/components/sections/hero-section/hero-section.scss
@@ -1,3 +1,15 @@
+[data-theme="dark"] .hero-section {
+  background: radial-gradient(103.12%50%at 50%50%, #21193a 0%, #191326 100%);
+  &__image-curve {
+    &--light {
+      display: none;
+    }
+    &--dark {
+      display: block;
+    }
+  }
+}
+
 .hero-section {
   display: flex;
   flex-direction: column;
@@ -5,10 +17,11 @@
   align-items: center;
   padding-top: 65px;
   padding-bottom: 49px;
-  background: linear-gradient(139.73deg, #e6fdff 0%, #f3efff 100%);
   position: relative;
   z-index: 1;
   overflow: hidden;
+  background: linear-gradient(139.73deg, #e6fdff 0%, #f3efff 100%);
+
   &__carousel-container {
     display: flex;
     padding: 0 24px;
@@ -30,7 +43,7 @@
     justify-content: center;
     h1 {
       font-size: 64px;
-      color: #7645d9;
+      color: var(--colors-secondary);
       font-weight: 600;
       line-height: 1.1;
       margin-bottom: 24px;
@@ -39,7 +52,7 @@
       font-size: 20px;
       font-weight: 600;
       line-height: 1.1;
-      color: #280d5f;
+      color: var(--colors-text);
       margin-bottom: 24px;
     }
   }
@@ -50,7 +63,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      color: white;
+      color: var(--colors-invertedContrast);
       border-radius: 16px;
       font-size: 16px;
       font-weight: 600;
@@ -61,6 +74,7 @@
       box-shadow: rgba(14, 14, 44, 0.4) 0px -1px 0px 0px inset;
       letter-spacing: 0.03em;
       line-height: 1;
+      cursor: pointer;
     }
     a {
       display: flex;
@@ -138,15 +152,17 @@
       }
     }
   }
-  &__image-curve--light {
+  &__image-curve {
     position: absolute;
     width: 100%;
     bottom: -3px;
     z-index: -3;
-    fill: #280d5f;
-    color: #280d5f;
     svg {
       display: block;
+      fill: var(--colors-text);
+    }
+    &--dark {
+      display: none;
     }
   }
 }
