--- a/css/components/sections/home-5-section/home-5-section.css
+++ b/css/components/sections/home-5-section/home-5-section.css
@@ -5,6 +5,13 @@
   --star-blink-duration: 2s;
 }
 
+[data-theme=dark] .section-5 {
+  background: linear-gradient(180deg, #0b4576 0%, #091115 100%);
+}
+[data-theme=dark] .section-5 .glass {
+  background: rgba(8, 6, 11, 0.6);
+}
+
 .section-5 {
   position: relative;
   overflow: hidden;
@@ -32,6 +39,7 @@
   max-width: 968px;
   display: flex;
   justify-content: center;
+  border: 1px solid var(--colors-cardBorder);
 }
 .section-5-wrapper .glass::after {
   content: "";
@@ -56,13 +64,13 @@
   font-size: 40px;
   font-weight: 600;
   line-height: 1.1;
-  color: #280d5f;
+  color: var(--colors-text);
 }
 .section-5-wrapper .glass-text .small-title-color {
-  color: #7645d9;
+  color: var(--colors-secondary);
 }
 .section-5-wrapper .glass-text .small-title-sub {
-  color: #280d5f;
+  color: var(--colors-textSubtle);
   font-weight: 400;
   line-height: 1.5;
   font-size: 16px;
@@ -246,7 +254,7 @@
   justify-content: center;
   height: 48px;
   gap: 4px;
-  color: white;
+  color: var(--colors-invertedContrast);
   background-color: #1fc7d4;
   border-radius: 16px;
   box-shadow: rgba(14, 14, 44, 0.4) 0px -1px 0px 0px inset;
@@ -260,7 +268,8 @@
   opacity: 0.65;
 }
 .card-prizes__button svg {
-  fill: white;
+  fill: var(--colors-invertedContrast);
+  flex-shrink: 0;
 }
 
 @media screen and (min-width: 968px) {
