--- a/css/components/sections/nft-section/nft-section.scss
+++ b/css/components/sections/nft-section/nft-section.scss
@@ -2,26 +2,26 @@
   padding-top: 32px;
   padding-bottom: 18px;
   margin-bottom: -18px;
-  background: linear-gradient(139.73deg, #e5fdff, #f3efff);
+  background: var(--colors-gradientBubblegum);
   form {
     input {
       padding: 0 40px 0 16px;
-      border: 1px solid #d7caec;
+      border: 1px solid var(--colors-inputSecondary);
       border-radius: 16px;
       box-shadow: inset 0px 2px 2px -1px rgba(74, 74, 104, 0.1);
       outline: none;
-      color: #280d5f;
+      color: var(--colors-text);
       font-size: 16px;
       line-height: 38px;
-      background-color: #eeeaf4;
+      background-color: var(--colors-input);
       max-height: 40px;
       width: 100%;
       &::placeholder {
-        color: #280d5f;
+        color: var(--colors-text);
         opacity: 0.67;
       }
       &:focus {
-        box-shadow: 0px 0px 0px 1px #7645d9,
+        box-shadow: 0px 0px 0px 1px var(--colors-secondary),
           0px 0px 0px 4px rgba(118, 69, 217, 0.6);
       }
     }
@@ -41,13 +41,13 @@
       margin-bottom: 24px;
       font-weight: 600;
       line-height: 1.1;
-      color: #7645d9;
+      color: var(--colors-secondary);
     }
     p {
       font-size: 24px;
       font-weight: 600;
       line-height: 1.1;
-      color: #280d5f;
+      color: var(--colors-text);
     }
   }
 }
@@ -111,7 +111,7 @@
     font-size: 24px;
     font-weight: 600;
     line-height: 1.1;
-    color: #280d5f;
+    color: var(--colors-text);
   }
 }
 
@@ -119,7 +119,7 @@
   width: 100%;
   height: 20px;
   clip-path: url(#topConcaveCurve);
-  background-color: #faf9fa;
+  background-color: var(--colors-background);
   transform: translate(0px, 1px);
   z-index: 1;
   position: relative;
@@ -130,7 +130,7 @@
 }
 .faq-section {
   padding: 64px 0;
-  background: linear-gradient(111.68deg, #f2ecf2, #e8f2f6);
+  background: var(--colors-gradientCardHeader);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -138,9 +138,10 @@
     background-color: white;
     overflow: hidden;
     position: relative;
-    border: 1px solid #e7e3eb;
-    border-bottom: 3px solid #e7e3eb;
+    border: 1px solid var(--colors-cardBorder);
+    border-bottom: 3px solid var(--colors-cardBorder);
     border-radius: 24px;
+    background-color: var(--colors-backgroundAlt);
   }
   &__body {
     padding: 24px;
@@ -150,13 +151,13 @@
     width: 100%;
   }
   &__header {
-    background: linear-gradient(111.68deg, #f2ecf2, #e8f2f6);
+    background: var(--colors-gradientCardHeader);
     padding: 24px;
     h4 {
       font-size: 24px;
       font-weight: 600;
       line-height: 1.1;
-      color: #7645d9;
+      color: var(--colors-secondary);
     }
   }
   &__container {
@@ -174,7 +175,7 @@
   }
 
   &__question {
-    color: #280d5f;
+    color: var(--colors-text);
     opacity: 0.99;
     line-height: 1.5;
     font-weight: 600;
@@ -229,7 +230,7 @@
       }
     }
     &-text {
-      color: #7a6eaa;
+      color: var(--colors-textSubtle);
       font-weight: 400;
       line-height: 1.5;
       font-size: 16px;
