--- a/css/components/sections/prediction-section/prediction-section.scss
+++ b/css/components/sections/prediction-section/prediction-section.scss
@@ -1,6 +1,6 @@
 .prediction-section {
   height: calc(100vh - 100px);
-  background: linear-gradient(180deg, #cbd7ef, #9a9fd0);
+  background: var(--colors-gradientVioletAlt);
   display: flex;
   &__content {
     display: grid;
@@ -33,7 +33,7 @@
   }
   &__timer {
     display: flex;
-    background-color: white;
+    background-color: var(--colors-backgroundAlt);
     padding: 8px 40px 8px 8px;
     border-radius: 24px;
     align-items: center;
@@ -49,19 +49,19 @@
   &__time-left {
     font-size: 20px;
     line-height: 22px;
-    color: #7645d9;
+    color: var(--colors-secondary);
     font-weight: 600;
   }
   &__total-time {
     font-weight: 400;
     line-height: 1.5;
     font-size: 12px;
-    color: #280d5f;
+    color: var(--colors-text);
     padding: 0 8px;
     max-width: 32px;
   }
   &__info-util {
-    background-color: #7a6eaa;
+    background-color: var(--colors-textSubtle);
     max-height: 48px;
     max-width: 48px;
     padding: 12px 12px;
@@ -84,7 +84,7 @@
     }
   }
   &__leaderboard-util {
-    background-color: #7a6eaa;
+    background-color: var(--colors-textSubtle);
     max-height: 48px;
     max-width: 48px;
     padding: 14px 14px;
@@ -109,7 +109,7 @@
     }
   }
   &__history-util {
-    background-color: #e9eaeb;
+    background-color: var(--colors-backgroundDisabled);
     max-height: 48px;
     max-width: 48px;
     padding: 12px 12px;
@@ -130,7 +130,7 @@
     flex: 0 0 auto;
   }
   &__currency-name {
-    background-color: white;
+    background-color: var(--colors-backgroundAlt);
     border-radius: 24px;
     width: fit-content;
     margin-left: 40px;
@@ -143,13 +143,13 @@
         font-size: 20px;
         line-height: 22px;
         font-weight: 600;
-        color: #280d5f;
+        color: var(--colors-text);
       }
       &:last-child {
         font-weight: 400;
         line-height: 1.5;
         font-size: 12px;
-        color: #280d5f;
+        color: var(--colors-text);
         padding: 0 16px;
         max-width: 70px;
       }
@@ -159,7 +159,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: white;
+    background-color: var(--colors-backgroundAlt);
     border-radius: 24px;
     width: 128px;
     position: relative;
@@ -213,10 +213,10 @@
     align-self: center;
     border-radius: 16px;
     svg {
-      fill: #7a6eaa;
+      fill: var(--colors-textSubtle);
     }
     &--active {
-      background-color: #7a6eaa;
+      background-color: var(--colors-textSubtle);
       svg {
         fill: white;
       }
@@ -252,7 +252,7 @@
   &__resize-bar {
     position: relative;
     cursor: pointer;
-    background-color: white;
+    background-color: var(--colors-backgroundAlt);
     height: 100%;
     &::before {
       content: "";
@@ -263,7 +263,7 @@
       height: 4px;
       width: 64px;
       border-radius: 8px;
-      background-color: #7a6eaa;
+      background-color: var(--colors-textSubtle);
     }
   }
   &__chainlink-anchor {
@@ -297,8 +297,8 @@
     border-radius: 24px 24px 0px 0px;
     font-size: 16px;
     font-weight: 600;
-    color: #7a6eaa;
-    background-color: #eeeaf4;
+    color: var(--colors-textSubtle);
+    background-color: var(--colors-input);
     padding: 16px;
     display: flex;
     align-items: center;
@@ -312,10 +312,11 @@
       letter-spacing: 0.00009em;
     }
     &--selected {
-      color: #280d5f;
-      background-color: white;
+      color: var(--colors-text);
+      background-color: var(--colors-backgroundAlt);
       svg {
         display: initial;
+        fill: var(--colors-text);
       }
     }
   }
@@ -329,7 +330,7 @@
       font-weight: 400;
       line-height: 1.5;
       font-size: 14px;
-      color: #280d5f;
+      color: var(--colors-text);
     }
     a {
       display: flex;
@@ -364,24 +365,24 @@
       width: 100%;
       display: block;
       circle {
-        fill: #7645d9;
+        fill: var(--colors-secondary);
       }
       .yAxis {
         .recharts-cartesian-axis-tick-value {
-          color: #7a6eaa;
+          color: var(--colors-textSubtle);
           font-size: 12px;
           stroke: none;
-          fill: #7a6eaa;
+          fill: var(--colors-textSubtle);
           text-anchor: start;
         }
       }
       .xAxis {
         .recharts-cartesian-axis-tick {
           .recharts-cartesian-axis-tick-value {
-            color: #280d5f;
+            color: var(--colors-text);
             font-size: 12px;
             stroke: none;
-            fill: #280d5f;
+            fill: var(--colors-text);
             text-anchor: middle;
           }
         }
