--- a/css/components/shared/ds-button-style/button-style.scss
+++ b/css/components/shared/ds-button-style/button-style.scss
@@ -144,7 +144,7 @@
     width: 48px;
     border-radius: 10px 10px;
     border: none;
-    background-color: #7a6eaa;
+    background-color: var(--colors-textSubtle);
     fill: white;
   }
 
@@ -153,7 +153,7 @@
     width: 48px;
     border-radius: 10px 10px;
     border: none;
-    background-color: #7a6eaa;
+    background-color: var(--colors-textSubtle);
     fill: white;
   }
 
