--- a/css/components/shared/nav-bottom/nav-bottom.scss
+++ b/css/components/shared/nav-bottom/nav-bottom.scss
@@ -1,31 +1,34 @@
-body {
-  background-color: #faf9fa;
-}
 .nav-bottom {
   padding-top: 1px;
-  display: flex;
-  justify-content: center;
-  overflow: hidden;
-  gap: 20px;
-  background-color: hsla(0, 0%, 100%, 0.7);
+  background-color: var(--colors-backgroundAlt2);
   box-shadow: rgba(133, 133, 133, 0.1) 0px -2px 0px -8px inset;
   position: relative;
-  // margin-top: 127px; da aggiungere quando nav e warning sono in fixed
 
+  &__items-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    overflow: scroll;
+    scroll-behavior: smooth;
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
   &__item {
     line-height: 42px;
     font-size: 16px;
     white-space: nowrap;
     font-weight: 400;
-    color: #7a6eaa;
+    color: var(--colors-textSubtle);
     text-decoration: none;
     padding: 0 4px;
     scroll-snap-align: start;
     &:hover {
-      background-color: #eff4f5;
+      background-color: var(--colors-tertiary);
     }
     &--active {
-      color: #7645d9;
+      color: var(--colors-secondary);
       font-weight: 600;
       position: relative;
       &::after {
@@ -41,6 +44,66 @@ body {
     }
     &:last-child {
       margin-right: 20px;
+    }
+  }
+  &__scroll-btn {
+    position: absolute;
+    z-index: 2;
+    width: 48px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    pointer-events: none;
+    opacity: 0;
+    transition: opacity 0.25s ease-out 0s;
+    border: none;
+
+    svg {
+      fill: var(--colors-text);
+      width: 20px;
+      height: 20px;
+      flex-shrink: 0;
+    }
+    &--right {
+      right: 0px;
+      top: 0px;
+      background: linear-gradient(
+        270deg,
+        rgb(39, 38, 44) 0%,
+        rgba(39, 38, 44, 0) 87.5%
+      );
+    }
+    &--left {
+      left: 0px;
+      top: 0px;
+      background: linear-gradient(
+        90deg,
+        rgb(39, 38, 44) 29.76%,
+        rgba(39, 38, 44, 0) 100%
+      );
+    }
+  }
+}
+
+.show {
+  opacity: 1;
+  transition: opacity 0.25s ease-in 0s;
+  pointer-events: all;
+}
+
+@media screen and (max-width: 851px) {
+  .nav-bottom {
+    &__items-container {
+      justify-content: flex-start;
+    }
+  }
+}
+
+@media screen and (max-width: 575px) {
+  .nav-bottom {
+    &__items-container {
+      padding-left: 12px;
     }
   }
 }
