--- a/css/components/sections/crypto-section/crypto-section.scss
+++ b/css/components/sections/crypto-section/crypto-section.scss
@@ -1,5 +1,5 @@
 .crypto-section {
-  background: linear-gradient(111.68deg, #f2ecf2, #e8f2f6);
+  background: var(--colors-gradientCardHeader);
   display: flex;
   flex-direction: column;
   padding-bottom: 48px;
@@ -11,7 +11,7 @@
       height: 100%;
       max-height: 48px;
       display: block;
-      fill: #faf9fa;
+      fill: var(--colors-background);
       flex-shrink: 0;
     }
   }
@@ -62,17 +62,17 @@
     h2 {
       font-size: 40px;
       font-weight: 600;
-      color: #280d5f;
+      color: var(--colors-text);
       line-height: 1.1;
       margin-bottom: 24px;
       span {
         font-family: Kanit, sans-serif;
         font-weight: 600;
-        color: #7645d9;
+        color: var(--colors-secondary);
       }
     }
     p {
-      color: #7a6eaa;
+      color: var(--colors-textSubtle);
       margin-bottom: 24px;
     }
   }
@@ -84,13 +84,13 @@
       font-size: 16px;
       font-weight: 600;
       cursor: pointer;
-      letter-spacing: 0.03em;
       &:first-child {
         background-color: #1fc7d4;
-        color: white;
+        color: var(--colors-invertedContrast);
         padding: 12px 24px;
         border-radius: 16px;
         box-shadow: rgba(14, 14, 44, 0.4) 0px -1px 0px 0px inset;
+        letter-spacing: 0.03em;
       }
       &:last-child {
         display: flex;
@@ -119,10 +119,10 @@
       font-size: 20px;
       font-weight: 600;
       line-height: 1.1;
-      color: #280d5f;
+      color: var(--colors-text);
       span {
         font-family: Kanit, sans-serif;
-        color: #7645d9;
+        color: var(--colors-secondary);
       }
     }
   }
@@ -132,7 +132,7 @@
     background-color: transparent;
     padding: 2px 12px;
     svg {
-      fill: #7a6eaa;
+      fill: var(--colors-textSubtle);
       display: block;
     }
   }
@@ -174,13 +174,13 @@
     }
     &-name {
       font-size: 12px;
-      color: #7645d9;
+      color: var(--colors-secondary);
       font-weight: 600;
       line-height: 1.5;
       margin-bottom: 8px;
     }
     &-percentage {
-      color: #280d5f;
+      color: var(--colors-text);
       font-size: 16px;
       line-height: 1.1;
       font-weight: 600;
@@ -188,7 +188,7 @@
     &-interest {
       font-size: 16px;
       font-weight: 400;
-      color: #7a6eaa;
+      color: var(--colors-textSubtle);
       line-height: 1.5;
     }
   }
