--- a/css/components/sections/footer/home-footer.scss
+++ b/css/components/sections/footer/home-footer.scss
@@ -66,7 +66,7 @@ ul {
 .svg-container {
   display: flex;
   order: 2;
-  padding-bottom: 34px;
+  padding-bottom: 32px;
   margin-bottom: 32px;
   border-bottom: 1px solid rgb(56, 50, 65);
 }
@@ -321,7 +321,7 @@ ul {
   height: 32px;
   padding: 0px 16px;
   background-color: rgb(31, 199, 212);
-  color: white;
+  color: var(--colors-invertedContrast);
   align-self: center;
   fill: rgb(255, 255, 255);
   text-decoration: none;
@@ -329,6 +329,15 @@ ul {
   &:hover {
     opacity: 0.65;
     transition: background-color 0.2s ease 0s, opacity 0.2s ease 0s;
+  }
+  &:active {
+    opacity: 0.85;
+    transform: translateY(1px);
+    box-shadow: none;
+  }
+  svg {
+    fill: var(--colors-invertedContrast);
+    flex-shrink: 0;
   }
 }
 
