--- a/css/components/sections/home-3-section/home-3-section.scss
+++ b/css/components/sections/home-3-section/home-3-section.scss
@@ -1,3 +1,7 @@
+[data-theme="dark"] .section-3 .divider svg {
+  fill: #201335;
+}
+
 .section-3 {
   position: relative;
   display: flex;
@@ -24,12 +28,12 @@
 
   .small-title {
     font-size: 40px;
-    color: #280d5f;
+    color: var(--colors-text);
     margin-bottom: 0.5rem;
     line-height: 1.1;
     font-weight: 600;
     & .color-sec {
-      color: #7645d9;
+      color: var(--colors-secondary);
     }
   }
 
@@ -49,32 +53,38 @@
 
   .paragraph {
     font-size: 18px;
-    color: #7a6eaa;
+    color: var(--colors-textSubtle);
     margin-top: 20px;
     margin-bottom: 28px;
   }
-
+  .button-e-link {
+    display: flex;
+    align-items: center;
+  }
   .link {
     color: #1fc7d4;
     text-decoration: none;
     align-items: center;
     width: fit-content;
     font-weight: 600;
-
+    display: flex;
+    align-items: center;
+    gap: 4px;
     &:hover {
       text-decoration: underline;
     }
     svg {
       fill: #1fc7d4;
-      margin-bottom: -5px;
-      align-self: center;
+      width: 20px;
+      height: 20px;
+      flex-shrink: 0;
     }
   }
   .main-button {
     padding: 10px 24px;
     font-size: 16px;
     font-weight: 600;
-    color: #ffffff;
+    color: var(--colors-invertedContrast);
     background-color: #1fc7d4;
     border: none;
     border-radius: 5px;
