--- a/css/components/shared/card-prizes/card-prizes.css
+++ b/css/components/shared/card-prizes/card-prizes.css
@@ -110,7 +110,7 @@
   justify-content: center;
   height: 48px;
   gap: 4px;
-  color: white;
+  color: var(--colors-invertedContrast);
   background-color: #1fc7d4;
   border-radius: 16px;
   box-shadow: rgba(14, 14, 44, 0.4) 0px -1px 0px 0px inset;
@@ -123,7 +123,7 @@
   opacity: 0.65;
 }
 .card-prizes__button svg {
-  fill: white;
+  color: var(--colors-invertedContrast);
 }
 
 /*# sourceMappingURL=card-prizes.css.map */
