--- a/css/components/shared/navbar/navbar.scss
+++ b/css/components/shared/navbar/navbar.scss
@@ -2,31 +2,32 @@
   display: flex;
   max-width: 100vw;
   height: 56px;
-  background-color: #fff;
-  border-bottom: #e7e3eb;
+  background-color: var(--colors-backgroundAlt);
+  border-bottom: var(--colors-cardBorder);
   padding-left: 1rem;
   padding-right: 1rem;
   align-items: center;
   position: relative;
   text-decoration: none;
-  color: #7a6eaa;
+  color: var(--colors-textSubtle);
   z-index: 999;
   transition: 200ms;
   transition-timing-function: ease-in-out;
   position: sticky;
   top: 0;
-  border-bottom: 1px solid #e7e3eb;
+  border-bottom: 1px solid var(--colors-cardBorder);
+
   &-l,
   &-r {
     display: flex;
+
     &__logo {
       display: flex;
       align-items: center;
     }
     &__menu {
       display: flex;
-      gap: 5px;
-      margin-left: 2rem;
+      margin-left: 1.5rem;
       text-decoration: none;
     }
   }
@@ -34,15 +35,20 @@
     width: fit-content;
     height: fit-content;
     position: relative;
+    &--settings {
+      margin: 0 4px;
+    }
     .sx-block {
       display: none;
+      color: var(--colors-text);
     }
     .lg-block {
       display: block;
+      color: var(--colors-text);
     }
     &btn__link {
       text-decoration: none;
-      color: #7a6eaa;
+      color: var(--colors-textSubtle);
       height: 48px;
       display: flex;
       align-items: center;
@@ -50,20 +56,47 @@
       border-radius: 16px;
       margin: 4px 0;
       padding: 0 1rem;
+      &--green-dot {
+        &::after {
+          content: "";
+          border-radius: 100%;
+          background: var(--colors-success);
+          height: 8px;
+          width: 8px;
+          margin-left: 12px;
+        }
+      }
+      &--red-dot {
+        &:after {
+          content: "";
+          border-radius: 100%;
+          background: var(--colors-failure);
+          height: 8px;
+          width: 8px;
+          margin-left: 12px;
+        }
+      }
+      &--active {
+        color: var(--colors-secondary) !important;
+        font-weight: 600;
+        svg {
+          fill: var(--colors-secondary) !important;
+        }
+      }
       &:hover {
-        background-color: #eff4f5;
+        background-color: var(--colors-tertiary);
       }
       svg {
-        fill: #7a6eaa;
+        fill: var(--colors-textSubtle);
       }
     }
     &__content {
       display: none;
       flex-direction: column;
       width: 250px;
-      background-color: white;
+      background-color: var(--colors-backgroundAlt);
       border-radius: 16px;
-      border: 1px solid #e7e3eb;
+      border: 1px solid var(--colors-cardBorder);
       z-index: 100 !important;
       position: absolute;
       &.full-width {
@@ -72,7 +105,7 @@
       a {
         display: inline-flex;
         text-decoration: none;
-        color: #7a6eaa;
+        color: var(--colors-textSubtle);
         margin-top: 5px;
         list-style-type: none;
         height: 2rem;
@@ -83,7 +116,7 @@
         transition: height 1s ease;
         min-height: 50px;
         &:hover {
-          background-color: #eff4f5;
+          background-color: var(--colors-tertiary);
           display: flex;
         }
       }
@@ -106,6 +139,7 @@
   }
   .bunny-logo-small {
     display: none;
+
     &:hover {
       animation: blink-logo-small 500ms linear 1 normal forwards;
     }
@@ -117,19 +151,25 @@
     align-items: center;
     -webkit-box-pack: justify;
     justify-content: space-between;
-    fill: #7a6eaa;
+    fill: var(--colors-textSubtle);
   }
   &-r {
     margin-left: auto;
+    height: 100%;
     &__content,
     & a {
       display: flex;
       align-items: center;
-      gap: 1rem;
-      color: #7a6eaa;
+      gap: 0.5rem;
+      color: var(--colors-textSubtle);
     }
     span {
       align-items: center;
+    }
+    .dropdownbtn {
+      svg {
+        fill: var(--colors-textSubtle);
+      }
     }
     .dropdownbtn:hover {
       opacity: 0.65;
@@ -141,13 +181,15 @@
       align-items: center;
       color: inherit;
       text-decoration: none;
-      margin-right: 12px;
-
+      margin-right: 4px;
+      &--value {
+        font-weight: 600;
+      }
       img {
         transition: transform 0.3s ease 0s;
         align-self: center;
-        fill: #280d5f;
-        color: #280d5f;
+        fill: var(--colors-text);
+        color: var(--colors-text);
         flex-shrink: 0;
         margin-right: 8px;
         width: 24px;
@@ -158,12 +200,14 @@
       }
     }
     &__content-lang {
+      margin: 0 8px;
       .dropdown__content {
         width: max-content;
         -webkit-font-smoothing: antialiased;
         flex-direction: column;
         position: absolute;
         transform: translate(-50%, 0px);
+        left: 50%;
         bottom: auto;
         box-shadow: 0px 2px 12px -8px rgba(25, 19, 38, 0.1),
           0px 1px 1px rgba(25, 19, 38, 0.05);
@@ -181,7 +225,7 @@
         transition: max-height 0s ease 0s, opacity 0.3s ease-in-out 0s;
         pointer-events: auto;
         a {
-          color: #280d5f;
+          color: var(--colors-text);
           padding: 0px 8px !important;
           min-height: 32px;
           margin: 0 auto;
@@ -203,25 +247,38 @@
           outline: 0px;
           transition: background-color 0.2s ease 0s, opacity 0.2s ease 0s;
           background-color: transparent;
+          &:hover {
+            background-color: unset;
+            opacity: 0.65;
+          }
         }
       }
     }
     .bnb-smart-chain {
-      .dropdownbtn__link {
-        position: relative;
-        display: flex;
-        padding-left: 3rem;
-        background: #eef4ff;
-        height: 2rem;
-        font-size: smaller;
-        gap: 2px;
+      height: 100%;
+      .dropdown {
+        height: 100%;
+        .dropdown-bnb {
+          height: 100%;
+          display: flex;
+          align-items: center;
+          .dropdownbtn__link {
+            position: relative;
+            display: flex;
+            padding-left: 2.5rem;
+            padding-right: 8px;
+            background-color: var(--colors-tertiary);
+            height: 2rem;
+            gap: 0.25rem;
 
-        a {
-          flex-direction: row;
+            a {
+              flex-direction: row;
+            }
+          }
+          img {
+            height: 45px;
+          }
         }
-      }
-      img {
-        height: 45px;
       }
     }
     .bnb-smart-chain .dropdown {
@@ -233,26 +290,33 @@
         box-shadow: inset 0px -1px 0px 0px rgba(14, 14, 44, 0.4);
         cursor: pointer;
         font: 600 16px/1 "Kanit";
-        border-bottom: 1px solid #7a6eaa;
-        color: #280d5f;
+        box-shadow: rgba(0, 0, 0, 0.1) 0px -2px 0px inset;
+        color: var(--colors-text);
         gap: 5px;
+        margin: 0;
         img {
           position: absolute;
           left: 0;
-          height: 40px;
+          height: 32px;
+          width: 32px;
+        }
+        svg {
+          flex-shrink: 0;
+          fill: var(--colors-text);
         }
         &:hover {
-          background: transparent;
+          opacity: 0.65;
         }
       }
       .dropdown__content {
-        background: white;
-        color: #7a6eaa;
+        background-color: var(--colors-backgroundAlt);
+        color: var(--colors-textSubtle);
         font-weight: 400;
         line-height: 1.5;
+        top: 100%;
         font-size: 16px;
         span {
-          color: #7a6eaa;
+          color: var(--colors-textSubtle);
           font-weight: 400;
           line-height: 1.5;
           font-size: 16px;
@@ -264,7 +328,7 @@
           height: 2rem;
         }
         .bnb {
-          color: #7645d9;
+          color: var(--colors-secondary);
           font-weight: 500;
           line-height: 1.5;
           font-size: 16px;
@@ -272,7 +336,13 @@
       }
     }
   }
+  .my-1 {
+    border-color: var(--colors-cardBorder);
+    border-style: solid;
+    border-width: 1px 0px 0px;
+  }
   .connect-wallet .menu-button {
+    display: block;
     border: 0px;
     border-radius: 16px;
     box-shadow: rgba(14, 14, 44, 0.4) 0px -1px 0px 0px inset;
@@ -288,7 +358,7 @@
     height: 32px;
     padding: 0px 16px;
     background-color: #1fc7d4;
-    color: #fff;
+    color: var(--colors-invertedContrast);
     &:hover {
       opacity: 0.65;
     }
@@ -325,6 +395,9 @@
 
 .bunny-logo {
   &-main {
+    fill: var(--colors-text);
+    width: 160px;
+    height: auto !important;
     .eye {
       transform-origin: 50% 60%;
     }
@@ -338,14 +411,7 @@
 }
 
 @media screen and (max-width: 1078px) {
-  .navbar-r__currency {
-    display: none;
-  }
   .bnb-smart-chain .dropdown {
-    width: 95px;
-    &btn__link {
-      width: inherit;
-    }
     & .sx-block {
       display: block;
     }
@@ -355,7 +421,7 @@
   }
 }
 
-@media screen and (max-width: 968px) {
+@media screen and (max-width: 967px) {
   .navbar-r__currency {
     display: none;
   }
@@ -364,9 +430,8 @@
       .bunny-logo {
         &-small {
           display: block !important;
-          height: 35px;
-          width: 2rem35px;
-          padding-left: 1rem;
+          width: 32px;
+          height: auto !important;
         }
 
         &-main {
@@ -383,8 +448,6 @@
 }
 @media screen and (max-width: 852px) {
   .navbar {
-    padding-left: 0;
-
     &-l {
       &__menu {
         display: flex;
@@ -393,17 +456,21 @@
         bottom: 0;
         width: 100%;
         height: unset;
-        border-top: 1px solid #e7e3eb;
-        background-color: #fff;
+        border-top: 1px solid var(--colors-cardBorder);
+        background-color: var(--colors-backgroundAlt);
         z-index: 1;
-        padding: 1rem;
+        padding: 5px 8px 0 8px;
         margin: 0;
-        justify-content: space-between;
+        left: 0;
+        align-items: center;
+        justify-content: space-around;
+        max-height: 50px;
         .bunny-logo-small:hover .eye {
           animation: blink-bunny-logo-small 500ms linear 1 normal forwards;
         }
         .dropdown {
-          position: unset;
+          position: relative;
+          height: 100%;
           & > a {
             font-size: 10px;
           }
@@ -412,16 +479,45 @@
             margin: 0 auto;
             display: flex;
             flex-direction: column;
-            align-items: center;
+            padding: 3.5px 12px;
             justify-content: center;
-            padding-top: 5px;
-            padding-right: 8px;
-            padding-left: 8px;
-            justify-content: space-around;
             text-decoration: none;
-            color: #7a6eaa;
+            height: unset;
+            color: var(--colors-textSubtle);
             > .icona {
               display: block !important;
+            }
+            &--green-dot {
+              &::after {
+                position: absolute;
+                top: 0px;
+                right: 0px;
+                width: 10px;
+                height: 10px;
+                pointer-events: none;
+                border: 2px solid var(--colors-invertedContrast);
+                border-radius: 50%;
+                background-color: var(--colors-success);
+                box-sizing: border-box;
+              }
+            }
+            &--red-dot {
+              &::after {
+                position: absolute;
+                top: 0px;
+                right: 0px;
+                width: 10px;
+                height: 10px;
+                pointer-events: none;
+                border: 2px solid var(--colors-invertedContrast);
+                border-radius: 50%;
+                background-color: var(--colors-failure);
+                box-sizing: border-box;
+              }
+            }
+            svg {
+              height: 22px;
+              width: 21px;
             }
           }
           &__content {
@@ -450,5 +546,11 @@
 @media screen and (max-width: 576px) {
   .bnb-smart-chain__dropdown {
     padding: 0.25rem 0.5rem 0.25rem 1rem;
+  }
+}
+
+@media screen and (max-width: 330px) {
+  .navbar {
+    padding: 0;
   }
 }
