--- a/css/components/shared/popup/popup.css
+++ b/css/components/shared/popup/popup.css
@@ -2,15 +2,15 @@
   max-width: 402px;
   border-radius: 32px;
   overflow: hidden;
-  border: 1px solid #e7e3eb;
+  border: 1px solid var(--colors-cardBorder);
 }
 .popup__header {
   padding: 24px;
   background: linear-gradient(139.73deg, #e5fdff, #f3efff);
-  border-bottom: 1px solid #e7e3eb;
+  border-bottom: 1px solid var(--colors-cardBorder);
 }
 .popup__header p {
-  color: #280d5f;
+  color: var(--colors-text);
   font-size: 24px;
   font-weight: 600;
   line-height: 1.1;
@@ -32,7 +32,7 @@
   font-weight: 600;
 }
 .popup__text--details {
-  color: #7a6eaa;
+  color: var(--colors-textSubtle);
   line-height: 1.5;
 }
 .popup__checkbox {
@@ -46,7 +46,7 @@
   flex-shrink: 0;
   margin: 11px 3px 0px 4px;
   border-radius: 8px;
-  background-color: #e7e3eb;
+  background-color: var(--colors-cardBorder);
   transition: background-color 0.2s ease-in-out 0s;
   cursor: pointer;
   position: relative;
@@ -69,13 +69,13 @@
   border-color: white;
 }
 .popup__checkbox .checkbox:hover {
-  box-shadow: 0px 0px 0px 1px #7645d9, 0px 0px 0px 4px rgba(118, 69, 217, 0.6);
+  box-shadow: 0px 0px 0px 1px var(--colors-secondary), 0px 0px 0px 4px rgba(118, 69, 217, 0.6);
 }
 .popup__checkbox .checkbox:checked {
   background-color: #31d0aa;
 }
 .popup__checkbox span {
-  color: #280d5f;
+  color: var(--colors-text);
   font-size: 16px;
   margin-left: 8px;
 }
@@ -87,7 +87,7 @@
   font-size: 16px;
   font-weight: 600;
   color: white;
-  background-color: #e9eaeb;
+  background-color: var(--colors-backgroundDisabled);
   color: #bdc2c4;
   letter-spacing: 0.48px;
   cursor: not-allowed;
