--- a/css/components/shared/scroll-up-button/scroll-up-button.css
+++ b/css/components/shared/scroll-up-button/scroll-up-button.css
@@ -23,7 +23,7 @@
   background-color: #1fc7d4;
 }
 .scroll-up__button svg {
-  fill: white;
+  fill: var(--colors-invertedContrast);
 }
 .scroll-up__button:hover {
   opacity: 0.65;
