--- a/css/components/shared/scrollbar/scrollbar.css
+++ b/css/components/shared/scrollbar/scrollbar.css
@@ -3,12 +3,12 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #7a6eaa;
+  background: var(--colors-textSubtle);
   border-radius: 8px;
 }
 
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px #eeeaf4;
+  box-shadow: inset 0 0 5px var(--colors-input);
   border-radius: 10px;
 }
 
