--- a/css/components/shared/scrollbar/scrollbar.scss
+++ b/css/components/shared/scrollbar/scrollbar.scss
@@ -3,11 +3,11 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #7a6eaa; //var(--colors-textSubtle)
+  background: var(--colors-textSubtle); //var(--colors-textSubtle)
   border-radius: 8px;
 }
 
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px #eeeaf4; //var(--colors-input)
+  box-shadow: inset 0 0 5px var(--colors-input); //var(--colors-input)
   border-radius: 10px;
 }
